force-app/main/default/objects/Opportunity_Counterparty__c/Opportunity_Counterparty__c.object-meta.xml
<CustomObject>
    <description>Custom object to track firms listed as counterparties for prospective engagements.</description>
    <label>Opportunity Counterparty</label>
    <nameField>
        <label>Counterparty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Counterparties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>