force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Account__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Account__c</fullName>
    <description>Archpoint Legacy Account ID</description>
    <label>Archpoint Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>