force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_APP_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_APP_Assignment__c</fullName>
    <label>Archpoint APP Assignment</label>
    <length>18</length>
    <type>Text</type>
</CustomField>