force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Campaign__c</fullName>
    <description>Archpoint Legacy Campaign ID</description>
    <label>Archpoint Campaign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>