force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Client_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Client_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint Client Relationship</label>
    <type>Checkbox</type>
</CustomField>