force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Comments__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Comments__c</fullName>
    <label>Archpoint Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>