force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Decline_Reason__c</fullName>
    <label>Archpoint Decline Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial profile</fullName>
            </value>
            <value>
                <fullName>Management team</fullName>
            </value>
            <value>
                <fullName>Market size</fullName>
            </value>
            <value>
                <fullName>Market sector</fullName>
            </value>
            <value>
                <fullName>Lack of market traction</fullName>
            </value>
            <value>
                <fullName>Not investment focus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>