force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Dialogue_History__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Dialogue_History__c</fullName>
    <label>Archpoint Dialogue History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>