force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Exec_Summ_Sent__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Exec_Summ_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint Exec Summ Sent</label>
    <type>Checkbox</type>
</CustomField>