force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Financial_Webex_Done__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Financial_Webex_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint Financial Webex Done</label>
    <type>Checkbox</type>
</CustomField>