force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_NDA_Negotiating__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_NDA_Negotiating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint NDA Negotiating</label>
    <type>Checkbox</type>
</CustomField>