force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Not_Invited_To_Next_Round__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Not_Invited_To_Next_Round__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint Not Invited To Next Round</label>
    <type>Checkbox</type>
</CustomField>