force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Notes__c</fullName>
    <label>Archpoint Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>