force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Hold and Declined can not be checked at the same time</description>
    <label>Archpoint On Hold</label>
    <type>Checkbox</type>
</CustomField>