force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Status_Sort_Value__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Status_Sort_Value__c</fullName>
    <label>Archpoint Status Sort Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>