force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Summ_Rpt_Sort_All_2__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Summ_Rpt_Sort_All_2__c</fullName>
    <description>Status_Sort_Value_2__c 
&amp; &quot; - &quot; &amp; 
CASE(Type__c, 
&quot;Strategic&quot;, &quot;1&quot;, 
&quot;Sponsor&quot;, &quot;2&quot;, 
&quot;0&quot;) &amp; &quot; - &quot; &amp; 
CASE(TEXT(Tier__c ), 
&quot;I&quot;, &quot;1&quot;, 
&quot;II&quot;, &quot;2&quot;, 
&quot;III&quot;, &quot;3&quot;, 
&quot;4&quot;) 
&amp; &quot; - &quot; &amp; Name</description>
    <label>Archpoint Summ Rpt Sort - All 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>