force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Ticker_Symbol__c</fullName>
    <description>Account__r.TickerSymbol</description>
    <label>Archpoint Ticker Symbol</label>
    <length>100</length>
    <type>Text</type>
</CustomField>