force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Tier__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Tier__c</fullName>
    <label>Archpoint Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>