force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Type__c</fullName>
    <description>CASE( Account__r.RecordTypeId , 
&quot;012A0000000biv5&quot;, &quot;Strategic&quot;, 
&quot;012A0000000biv6&quot;, &quot;Sponsor&quot;, 
&quot;&quot;)</description>
    <label>Archpoint Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>