force-app/main/default/objects/Opportunity_Counterparty__c/fields/Archpoint_Web_Presentation_Req__c.field-meta.xml
<CustomField>
    <fullName>Archpoint_Web_Presentation_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archpoint Web Presentation Req</label>
    <type>Checkbox</type>
</CustomField>