force-app/main/default/objects/Opportunity_Counterparty__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Shown</relationshipLabel>
    <relationshipName>Opportunity_Counterparties</relationshipName>
    <type>Lookup</type>
</CustomField>