force-app/main/default/objects/Opportunity_Counterparty__c/fields/Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement__c</fullName>
    <description>Date sent/requested confidentiality agreement</description>
    <label>Sent Confidentiality Agreement</label>
    <type>Date</type>
</CustomField>