force-app/main/default/objects/Opportunity_Counterparty__c/fields/Coverage_Officer__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities as Coverage Officer</relationshipLabel>
    <relationshipName>Opportunity_Counterparties</relationshipName>
    <type>Lookup</type>
</CustomField>