force-app/main/default/objects/Opportunity_Counterparty__c/fields/Executed_Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Executed_Confidentiality_Agreement__c</fullName>
    <label>Executed Confidentiality Agreement</label>
    <type>Date</type>
</CustomField>