force-app/main/default/objects/Opportunity_Counterparty__c/fields/Industry_Focus__c.field-meta.xml
<CustomField>
    <fullName>Industry_Focus__c</fullName>
    <label>Industry Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Energies</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Auto and Truck Mfg &amp; Dist</fullName>
            </value>
            <value>
                <fullName>Biotech/Pharma</fullName>
            </value>
            <value>
                <fullName>Building Products &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Business Information</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Commercial Aerospace</fullName>
            </value>
            <value>
                <fullName>Commercial Banks</fullName>
            </value>
            <value>
                <fullName>Communications/Networkg</fullName>
            </value>
            <value>
                <fullName>Consumer/Industl Electr</fullName>
            </value>
            <value>
                <fullName>Consumer Food &amp; Retail - Other</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Debt Collection</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Devices</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Diversified Industrials</fullName>
            </value>
            <value>
                <fullName>E-commerce, Platforms &amp; Marketplace</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Electronics Manuf/Distr</fullName>
            </value>
            <value>
                <fullName>Engineering/Construction</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Environmental Technologi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>