force-app/main/default/objects/Opportunity_Counterparty__c/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <description>Date of initial contact with the counterparty</description>
    <label>Initial Contact</label>
    <type>Date</type>
</CustomField>