force-app/main/default/objects/Opportunity_Counterparty__c/fields/Invited_to_Dataroom__c.field-meta.xml
<CustomField>
    <fullName>Invited_to_Dataroom__c</fullName>
    <description>Date invited to dataroom</description>
    <label>Invited to Dataroom</label>
    <type>Date</type>
</CustomField>