force-app/main/default/objects/Opportunity_Counterparty__c/fields/Letter_of_Intent__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Intent__c</fullName>
    <description>Date of LOI</description>
    <label>Letter of Intent</label>
    <type>Date</type>
</CustomField>