force-app/main/default/objects/Opportunity_Counterparty__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup Received</label>
    <type>Date</type>
</CustomField>