force-app/main/default/objects/Opportunity_Counterparty__c/fields/Max_Hold_MM__c.field-meta.xml
<CustomField>
    <fullName>Max_Hold_MM__c</fullName>
    <label>Max Hold ($MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>