force-app/main/default/objects/Opportunity_Counterparty__c/fields/Met_With_Management__c.field-meta.xml
<CustomField>
    <fullName>Met_With_Management__c</fullName>
    <description>Date management was met/presented to</description>
    <label>Met With Management</label>
    <type>Date</type>
</CustomField>