force-app/main/default/objects/Opportunity_Counterparty__c/fields/Minimum_Investment_MM__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_MM__c</fullName>
    <label>Minimum Investment ($MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>