force-app/main/default/objects/Opportunity_Counterparty__c/fields/Notes_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Notes_Rationale__c</fullName>
    <label>Notes/Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>