force-app/main/default/objects/Opportunity_Counterparty__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Counterparties</relationshipLabel>
    <relationshipName>Opportunity_Counterparties</relationshipName>
    <type>Lookup</type>
</CustomField>