force-app/main/default/objects/Opportunity_Counterparty__c/fields/Opportunity_Counterparty_Comment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Counterparty_Comment__c</fullName>
    <label>Opportunity Counterparty Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>