force-app/main/default/objects/Opportunity_Counterparty__c/fields/Phone_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Phone_Discussion__c</fullName>
    <description>Date of phone/web conference discussion</description>
    <label>Phone Discussion</label>
    <type>Date</type>
</CustomField>