force-app/main/default/objects/Opportunity_Counterparty__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seller Majority Owner</fullName>
            </value>
            <value>
                <fullName>Buyer Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Buyer Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Seller Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Equity Holder</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Buyer Contact</fullName>
            </value>
            <value>
                <fullName>Majority Owner</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Seller Management Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Adverse</fullName>
            </value>
            <value>
                <fullName>Management Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>