force-app/main/default/objects/Opportunity_Counterparty__c/fields/Proposal_Indication__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Indication__c</fullName>
    <description>Date received/submitted proposal indication</description>
    <label>Received/Submitted Proposal Indication</label>
    <type>Date</type>
</CustomField>