force-app/main/default/objects/Opportunity_Counterparty__c/fields/Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reason_Comment__c</fullName>
    <description>Reason for pass/decline additional comment</description>
    <label>Reason Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>