force-app/main/default/objects/Opportunity_Counterparty__c/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <description>Passed/Declined reasoning</description>
    <label>Reason for Decline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a strategic fit</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Unattractive financial profile</fullName>
            </value>
            <value>
                <fullName>No relevant portfolio company</fullName>
            </value>
            <value>
                <fullName>Size - too small/large</fullName>
            </value>
            <value>
                <fullName>Industry dynamics</fullName>
            </value>
            <value>
                <fullName>Customer Concentration</fullName>
            </value>
            <value>
                <fullName>No angle</fullName>
            </value>
            <value>
                <fullName>Leverage</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Other Opportunities in Space</fullName>
            </value>
            <value>
                <fullName>Company/Situation Specific</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>