force-app/main/default/objects/Opportunity_Counterparty__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Post-Transaction</fullName>
            </value>
            <value>
                <fullName>Pre-Transaction</fullName>
            </value>
            <value>
                <fullName>PE Firm (Target)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>