force-app/main/default/objects/Opportunity_Counterparty__c/fields/Schedule_Management_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Management_Meeting__c</fullName>
    <description>Date of management meeting request/schedule</description>
    <label>Schedule Management Meeting</label>
    <type>Date</type>
</CustomField>