force-app/main/default/objects/Opportunity_Counterparty__c/fields/Sent_Teaser__c.field-meta.xml
<CustomField>
    <fullName>Sent_Teaser__c</fullName>
    <description>Date the teaser was sent</description>
    <label>Sent Teaser</label>
    <type>Date</type>
</CustomField>