force-app/main/default/objects/Opportunity_Counterparty__c/listViews/By_Opp.listView-meta.xml
<ListView>
    <fullName>By_Opp</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>Project MaRS</value>
    </filters>
    <label>By Opp</label>
</ListView>